--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
+    body {     
+      font-family: 'Montserrat', sans-serif;
       background: #0f172a;
       color: white;
-      text-align: center;
-      padding: 100px 20px;
+      max-width: 800px;
+      margin: auto;
+      padding: 2rem;
+      line-height: 1.6;      
     }
     h1 {
       font-size: 3rem;
       letter-spacing: 2px;
+      font-family: 'Baloo 2', sans-serif;
     }
     span {
       color: #3b82f6;
@@ -26,6 +28,8 @@
       color: #cbd5e1;
     }
   </style>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">  
+<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600;700&display=swap" rel="stylesheet">  
 </head>
 <body>
   <h1>Elev<span>atum</span></h1>
