--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Baloo+2:wght@400;600;700&display=swap" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Baloo+2:wght@400;500;600;700&display=swap" rel="stylesheet">  
   <!-- Font Awesome CDN -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
   <style>
     body {     
       font-family: 'Montserrat', sans-serif;
-      background: #494d60;
+      background: #151d28; /*#494d60*/
       color: #081626; 
       line-height: 1.6;   
       background-image: url("https://www.transparenttextures.com/patterns/crossword.png");
@@ -23,19 +23,29 @@
 
     strong {color:#484e5e;}
 
-    .content { border-radius: 24px; background: white; max-width: 80%; margin: 50px auto; padding: 2rem; }
-    h1 {
-      font-size: 2.5rem;
-      xletter-spacing: 2px;
-      font-family: 'Baloo 2', sans-serif;
-      line-height: 1.1;
-      margin: 0;
-      color: #696f89;
+    .content { border-radius: 24px; background: #f4d0bc; max-width: 85%; margin: 40px auto; padding: 2rem; }
+    
+    .signature {
+      color: white;
+      max-width: 88%;
+      margin: 0px auto;
+      text-align: right;
+      position: relative;
+      top: -30px;
+      font-size: 14px;
     }
 
-    h2 {color:#303d50;}
-    h3 {color:#303d50;}
-    h4 {color:#303d50;}
+    h1 {
+      font-size: 2.5rem;
+      margin: 0;
+      margin-top: -5px;
+      font-family: 'Baloo 2', sans-serif;
+      line-height: 1.1;
+      color: #4d545d;
+    }
+
+    h2, h3, h4 {color: #f4d0bc; font-size: 14pt;}
+    h4 {color: #ab826b;margin-top: 18px;}
 
     p.tagline {
       margin: 0 0 3rem 0;           /* remove extra space */
@@ -49,15 +59,13 @@
 
     a { color: #36394a; text-decoration: none; cursor: pointer; }
     a:hover { text-decoration: underline; }
+    .item a { font-weight: 500; color: #0b1c7a; text-decoration: underline; }
+    .item a:hover { text-decoration: none; }
 
     /* --- 3-part layout --- */
     .horizontal-panel {
-      background: #2f3236;
-      padding: 8px 12.5rem;
-      margin-left: calc(50% - 50vw);
-      margin-right: calc(50% - 50vw);
-      color: #cbcedd;
-      margin-top: 1rem;
+      xbackground: #1e293b;
+      xpadding: 1rem 2rem;
       margin-bottom: 2rem;
     }
 
@@ -70,14 +78,16 @@
       flex: none;
       width: auto;
       white-space: nowrap;
-      background: #d9c9cd;
+      background: #33373c;
       padding: 0 1rem;
       border-radius: 8px;
     }
 
+    .toc ul, .toc a {color: white;}
+
     .item-display {
       flex: 2;
-      background: #b6e0e7;
+      background: #fff;
       padding: 0 1rem;
       border-radius: 8px;
       min-height: 200px;
@@ -106,7 +116,7 @@
 
   <!--<h2>Portfolio Overview</h2>-->
 
-  <p>A collection of custom-built tools and utilities developed for both web and desktop platforms. These applications solve complex, real-world problems in production environments, delivering automation solutions that improve content workflows, ensure accessibility compliance, and generate significant operational efficiencies. Each project demonstrates the ability to translate practical challenges into scalable, production-grade systems. This body of work represents solution architecture and advisory practice focused on delivering measurable improvements in enterprise content delivery and process automation.</p>
+  <p>A portfolio of custom-built tools and utilities for web and desktop platforms that address real-world production challenges. These applications enhance content workflows, maintain accessibility standards, and generate tangible operational improvements. Each solution demonstrates the translation of practical problems into scalable, production-grade systems.</p>
 
   </div>
 
@@ -132,7 +142,7 @@
 
       <h3>Table Automation Framework</h3>
       <ul>
-        <li><a onclick="showItem('tablextract')">TableXtract (2025)</a></li>
+        <li><a onclick="showItem('tablextract')">TableXtract ✦ AI-Powered (2025)</a></li>
         <li><a onclick="showItem('tablecraft')">TableCraft (2024)</a></li>
         <li><a onclick="showItem('tablesync')">TableSync Mirror (2024)</a></li>
         <li><a onclick="showItem('tablenote')">TableNote (2021)</a></li>
@@ -181,7 +191,7 @@
           <li><strong>Email draft generator:</strong> pre-fills recipients, subject lines, and relevant URLs, letting users switch between preview links for client approval or live links for final distribution</li>
         </ul>
 
-        <p><strong>✓ Zero infrastructure:</strong> no installation, no backend dependencies, no system admins approvals</p>
+        <p><strong>✓ Zero infrastructure:</strong> no installation, no backend dependencies, no system admin approvals</p>
       </div>
 
       <!-- Document & Accessibility Automation -->
@@ -198,7 +208,7 @@
           <li><strong>Interactive diagnostic reports:</strong> generates a Word file featuring a TOC with CTRL+clickable links to flagged issues for review and correction</li>
           <li><strong>Privacy-first analysis:</strong> the entire document is processed locally for security; only URLs are sent externally for link validation</li>
           <li><strong>Tech stack:</strong> JavaScript, Microsoft Azure Functions (Python), HTML, CSS</li>
-          <li><strong>System Architecture:</strong> see the technical workflow <a href="https://drive.google.com/file/d/1Wuu778WfrvgWznzPZ6uKAu530AAjsbiu/view?usp=drive_link">diagram</a></li>
+          <li><strong>System Architecture:</strong> see the technical workflow <a href="assets/docprep-diagram.pdf">diagram</a></li>
         </ul>
       </div>
 
@@ -229,7 +239,7 @@
           <li><strong>Analytics and feedback:</strong> provides real-time counts displayed beside each operation, allowing users to immediately see how many instances of specific issues or elements (such as deprecated attributes or footnotes) are present in the HTML. This helps users quickly assess the scope of cleanup and improvements needed</li>
           <li><strong>Real-time validation:</strong> automatically detects HTML syntax errors, invalid heading hierarchy structure, accessibility errors, and displays them in the console panel, with each message clickable to jump directly to the specific line number</li>
           <li><strong>Tech stack:</strong> JavaScript, HTML, CSS, CodeMirror 5.65.2, Google Apps Script (serverless backend)</li>
-          <li><strong>System Architecture:</strong> discover the <a href="https://drive.google.com/file/d/1qXux1SxFKpFwRn63WOhKlfSmyu-RP5I1/view?usp=drive_link">visual overview</a> illustrating the sequential pipeline and automated processing flow</li>
+          <li><strong>System Architecture:</strong> discover the <a href="assets/codebot-diagram.pdf">visual overview</a> illustrating the sequential pipeline and automated processing flow</li>
         </ul>
 
         <h3>Modules added since rollout</h3>
@@ -350,5 +360,6 @@
   </script>
 </div>
 
+  <div class="signature">© elevatum 2019–2026</div>
 </body>
 </html>
