--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
       display: none;
     }
 
+    sup { color: #f4d0bc; font-size: 12px;}
+    
     /* Mobile layout */
     @media (max-width: 768px) {
       .content-wrapper {
@@ -122,26 +124,26 @@
     <div class="toc">
       <h3>Jira Ecosystem  <i class="fas fa-home" style="float:right; cursor:pointer;" onclick="showItem('default')"></i></h3>
       <ul>
-        <li><a onclick="showItem('workload')">Workload Distribution (2026)</a></li>
-        <li><a onclick="showItem('jira')">JIRA SyncFlow (2026)</a></li>
+        <li><a onclick="showItem('workload')">Workload Distribution</a> <sup>2026</sup></li>
+        <li><a onclick="showItem('jira')">JIRA SyncFlow</a> <sup>2026</sup></li>
       </ul>
 
       <h3>Document & Accessibility Automation</h3>
       <ul>
-        <li><a onclick="showItem('docprep')">DocPrep (2026)</a></li>
-        <li><a onclick="showItem('xmlmorph')">XML Morph (2023)</a></li>
-        <li><a onclick="showItem('codebot')">CodeBOT (2020)</a></li>
-        <li><a onclick="showItem('autopdf')">AutoPDF Builder (2020)</a></li>
-        <li><a onclick="showItem('flashconv')">Flash-Conv (2019)</a></li>
-        <li><a onclick="showItem('flashcode')">Flash-Code (2019)</a></li>
+        <li><a onclick="showItem('docprep')">DocPrep</a> <sup>2026</sup></li>
+        <li><a onclick="showItem('xmlmorph')">XML Morph</a> <sup>2023</sup></li>
+        <li><a onclick="showItem('codebot')">CodeBOT</a> <sup>2020</sup></li>
+        <li><a onclick="showItem('autopdf')">AutoPDF Builder</a> <sup>2020</sup></li>
+        <li><a onclick="showItem('flashconv')">Flash-Conv</a> <sup>2019</sup></li>
+        <li><a onclick="showItem('flashcode')">Flash-Code</a> <sup>2019</sup></li>
       </ul>
 
       <h3>Table Automation Framework</h3>
       <ul>
-        <li><a onclick="showItem('tablextract')">TableXtract ✦ AI-Powered (2025)</a></li>
-        <li><a onclick="showItem('tablecraft')">TableCraft (2024)</a></li>
-        <li><a onclick="showItem('tablesync')">TableSync Mirror (2024)</a></li>
-        <li><a onclick="showItem('tablenote')">TableNote (2021)</a></li>
+        <li><a onclick="showItem('tablextract')">TableXtract ✦ AI-Powered</a> <sup>2025</sup></li>
+        <li><a onclick="showItem('tablecraft')">TableCraft</a> <sup>2024</sup></li>
+        <li><a onclick="showItem('tablesync')">TableSync Mirror</a> <sup>2024</sup></li>
+        <li><a onclick="showItem('tablenote')">TableNote</a> <sup>2021</sup></li>
       </ul>
     </div>
 
