--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 
     strong {color:#484e5e;}
 
-    .content { border-radius: 24px; background: #f4d0bc; max-width: 85%; margin: 40px auto; padding: 2rem; }
+    .content { border-radius: 16px; background: #f4d0bc; max-width: 85%; margin: 40px auto; padding: 2rem; box-shadow: 3px 9px 21px #000; border: 1px solid #ffffff; }
     
     .signature {
-      color: white;
+      color: #f4d0bc;
       max-width: 88%;
       margin: 0px auto;
       text-align: right;
       position: relative;
-      top: -30px;
+      top: -35px;
       font-size: 14px;
     }
 
@@ -128,7 +128,7 @@
         <li><a onclick="showItem('jira')">JIRA SyncFlow</a> <sup>2026</sup></li>
       </ul>
 
-      <h3>Document & Accessibility Automation</h3>
+      <h3>Document &amp; Accessibility Automation</h3>
       <ul>
         <li><a onclick="showItem('docprep')">DocPrep</a> <sup>2026</sup></li>
         <li><a onclick="showItem('xmlmorph')">XML Morph</a> <sup>2023</sup></li>
@@ -358,6 +358,6 @@
   </script>
 </div>
 
-  <div class="signature">© elevatum 2019–2026</div>
+  <div class="signature">© <span style="color:white;">elevatum</span> 2019–2026</div>
 </body>
 </html>
