--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       top: 20px;
     }
 
-    h2, h3, h4 {color: #f4d0bc; font-size: 14pt;}
+    h2, h3, h4 {color: #f4d0bc; font-size: 14pt; font-weight: 600;}
     h4 {color: #ab826b;margin-top: 18px;}
 
     span { color: #f4d0bc; }
