--- a/index.html
+++ b/index.html
@@ -343,24 +343,35 @@
   </div>
 
   <script>
-    function showItem(id) {
-      // hide all items
-      const items = document.querySelectorAll('.item');
-      items.forEach(item => item.style.display = 'none');
+function showItem(id) {
 
-      // show selected
-      const el = document.getElementById(id);
-      if(el) el.style.display = 'block';
-    }
+  // hide all items
+  const items = document.querySelectorAll('.item');
+  items.forEach(item => item.style.display = 'none');
+
+  // show selected
+  const el = document.getElementById(id);
+  if (el) el.style.display = 'block';
+
+  // remove active class from all TOC links
+  document.querySelectorAll('.toc a')
+    .forEach(l => l.classList.remove('active'));
+
+}
 
   // show default item on page load
   window.addEventListener('DOMContentLoaded', () => {
     showItem('default');  // replace 'default' with your actual default item id
   });
 
-  document.querySelectorAll('.toc a').forEach(link => {
-  link.addEventListener('click', function() {
-    document.querySelectorAll('.toc a').forEach(l => l.classList.remove('active'));
+document.querySelectorAll('.toc a').forEach(link => {
+  link.addEventListener('click', function(e) {
+
+    if (this.classList.contains('active')) {
+      e.preventDefault();
+      return;
+    }
+
     this.classList.add('active');
   });
 });
