--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 
       <!-- Table Automation Framework -->
       <div id="tablextract" class="item">
-        <h4>TableXtract (2025)</h4>
+        <h4>TableXtract <span style="font-weight: 400; color: #626c7e;">✦ AI-Powered</span> (2025)</h4>
         <p>Cloud-based microservice that converts table images into structured HTML. It accepts binary image uploads, performs server-side OCR and table detection, and returns clean, standardized output ready for downstream automation. The service runs in both local and web-based environments, delivering fast and consistent results. Built as a scalable, serverless component, TableXtract can be easily integrated into existing applications and workflows that require accurate table extraction from screenshots, scans, or other image sources.</p>
 
         <figure class="fig-thumb">
