--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     }
 
     sup { color: #f4d0bc; font-size: 12px;}
-    code { color: #fff; font-size: 14px; background:#626783; border-radius: 4px; padding: 2px 4px;}
+    code { color: #33373c; font-size: 14px; background:#ffe7da; border-radius: 4px; padding: 2px 4px;}
     
     .fig-thumb {
       display: block;
