--- a/index.html
+++ b/index.html
@@ -443,7 +443,17 @@
 
       <div id="autopdf" class="item">
         <h4>AutoPDF Builder (2020)</h4>
-        <p>This application automates a previously manual time-consuming task by converting web pages into bilingual PDF files. It reads URLs from a spreadsheet and processes each one through the following steps:</p>
+        <p>This application automates a previously manual time-consuming task by converting web pages into bilingual PDF files. It reads URLs from a spreadsheet and processes each one converting the page to a PDF file.</p>
+
+        <figure class="fig-thumb">
+          <a href="assets/apb/apb.png" class="glightbox" data-title="<strong>Headless print automation pipeline</strong> — processes spreadsheet-based URLs, expands dynamic content, sanitizes layout elements, and generates consistent bilingual PDF outputs">
+            <img src="assets/apb/apb.png" alt="">
+          </a>
+          <figcaption class="figCap"><strong>Headless print automation pipeline</strong> — processes spreadsheet-based URLs, expands dynamic content, sanitizes layout elements, and generates consistent bilingual PDF outputs</figcaption>
+        </figure> 
+
+        <p>How it works:</p>
+
         <ul>
           <li>Loads the web page and prepares it for printing by expanding all collapsible elements (<code>&lt;details&gt;</code> tags), ensuring that all content is visible</li>
           <li>Removes non-essential elements like breadcrumb navigation and archived notices to produce a cleaner and more focused print output</li>
