--- a/index.html
+++ b/index.html
@@ -446,10 +446,10 @@
         <p>This application automates a previously manual time-consuming task by converting web pages into bilingual PDF files. It reads URLs from a spreadsheet and processes each one converting the page to a PDF file.</p>
 
         <figure class="fig-thumb">
-          <a href="assets/apb/apb.png" class="glightbox" data-title="<strong>Headless print automation pipeline</strong> — processes spreadsheet-based URLs, expands dynamic content, sanitizes layout elements, and generates consistent bilingual PDF outputs">
+          <a href="assets/apb/apb.png" class="glightbox" data-title="<strong>Browser PDF automation pipeline</strong> — processes spreadsheet-based URLs, expands dynamic content, sanitizes layout elements, and generates consistent bilingual PDF outputs">
             <img src="assets/apb/apb.png" alt="">
           </a>
-          <figcaption class="figCap"><strong>Headless print automation pipeline</strong> — processes spreadsheet-based URLs, expands dynamic content, sanitizes layout elements, and generates consistent bilingual PDF outputs</figcaption>
+          <figcaption class="figCap"><strong>Browser PDF automation pipeline</strong> — processes spreadsheet-based URLs, expands dynamic content, sanitizes layout elements, and generates consistent bilingual PDF outputs</figcaption>
         </figure> 
 
         <p>How it works:</p>
