--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
           <li>Removes non-essential elements like breadcrumb navigation and archived notices to produce a cleaner and more focused print output</li>
           <li>Automatically configures the browser's print settings (e.g., layout, margins, headers/footers) to ensure consistent PDF formatting</li>
           <li>Saves the English version of the page as a PDF, then switches to the corresponding French page to repeat the preparation and PDF conversion steps, producing a bilingual counterpart</li>
-          <li><strong>Tech stack:</strong> Python, Selenium WebDriver, Chrome browser, JavaScript, Microsoft Excel</li>
+          <li><strong>Tech stack:</strong> Python, Selenium WebDriver, ChromeDriver, Chrome browser, JavaScript, Microsoft Excel</li>
         </ul>
          <a href="https://www.youtube.com/watch?v=ZizEmOH_jNU" class="yt-watch" style="float:left;">Watch on <i class="fa-brands fa-youtube"></i> YouTube</a>
       </div>
