--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     .content { border-radius: 16px; background: #f4d0bc; max-width: 85%; margin: 40px auto; padding: 2rem; box-shadow: 3px 9px 21px #000; border: 1px solid #ffffff; }
     
     .signature {
-      color: #f4d0bc;
+      color: #ffffffb8;
       max-width: 88%;
       margin: 0px auto;
       text-align: right;
@@ -654,7 +654,7 @@ function showItem(id) {
 
 </div>
 
-  <div class="signature">© <span style="color:white;">elevatum</span> 2019–2026</div>
+  <div class="signature">© elevatum 2019–2026</div>
 
 </body>
 </html>
