--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
 
     .content-wrapper {
       display: flex;
-      gap: 2rem;
     }
 
     .toc {
@@ -77,7 +76,7 @@
       width: auto;
       background: #33373c;
       padding: 0 1rem;
-      border-radius: 8px;
+      border-radius: 8px 0 0 8px;
       position: relative; /* Keep background in normal flow */
       overflow: visible; /* Allow sticky content to extend */
     }
@@ -98,8 +97,8 @@
     .item-display {
       flex: 2;
       background: #fff;
-      padding: 0 1rem;
-      border-radius: 8px;
+      padding: 0 2.2rem;
+      border-radius: 0 8px 8px 0;
       min-height: 200px;
       box-shadow: 2px 6px 14px #ab846e;
       padding-bottom: 20px;
