--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       padding: 0 2.2rem;
       border-radius: 0 8px 8px 0;
       min-height: 200px;
-      box-shadow: 2px 6px 14px #ab846e;
+      box-shadow: 6px 6px 14px #ab846e8c;
       padding-bottom: 20px;
     }
 
