--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       top: 20px;
     }
 
-    h2, h3, h4 {color: #fff; font-size: 14pt; font-weight: 300;}
+    h2, h3, h4 {color: #f4d0bc; font-size: 14pt; font-weight: 300;}
     h4 {color: #626c7e;margin-top: 18px;font-weight: 700;}
 
     span { color: #f4d0bc; }
@@ -89,9 +89,9 @@
       overflow-y: auto;      
     }    
 
-    .toolset {color:#f4d0bc;border-bottom: 1px solid #7f6c62;padding-bottom: 5px;font-weight: 500;}
+    .toolset {color:#ff8d8d;border-bottom: 1px solid #c77373;padding-bottom: 5px;font-weight: 500;}
 
-    .toc ul, .toc a {color: #f4d0bc;}
+    .toc ul, .toc a {color: #fff;}
     .toc a.active {color: #ff8d8d; pointer-events: none; text-decoration: none; cursor: default; }
 
     .item-display {
@@ -109,7 +109,7 @@
       display: none;
     }
 
-    sup { color: #fff; font-size: 12px;}
+    sup { color: #f4d0bc; font-size: 12px;}
     code { color: #33373c; font-size: 14px; background:#ffe7da; border-radius: 4px; padding: 2px 4px;}
     
     .fig-thumb {
