--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         <p>A real‑time dashboard that extracts and visualizes team workload directly from a Jira project view. It consolidates paginated ticket data into a single interactive panel, providing instant visibility into how work is distributed across the team and who has available capacity.</p>      
 
         <figure class="fig-thumb">
-          <a href="assets/jwd/progress.png" class="glightbox" data-title="<strong>Team capacity visualization</strong> — who is currently busy working on a ticket, who has availability, and overall workload distribution">
+          <a href="assets/jwd/progress.png" class="glightbox" data-title="<strong>Team Cpacity Visualization</strong> — who is currently busy working on a ticket, who has availability, and overall workload distribution">
             <img src="assets/jwd/progress.png" alt="">
           </a>
           <figcaption><strong>Team capacity visualization</strong> — who is currently busy working on a ticket, who has availability, and overall workload distribution</figcaption>
@@ -298,9 +298,9 @@
         <!-- Gallery Thumbnails -->
         <div class="gallery">
         <p><strong>View gallery:</strong>
-          <a href="assets/jwd/assign.png" class="glightbox glightbox-link" data-title="<strong>Tickets awaiting assignment</strong> — displays unassigned items in the queue and team members availability">availability</a>
-          <a href="assets/jwd/progress-2.png" class="glightbox glightbox-link" data-title="<strong>Dynamic metrics</strong> — toggle between counts and percentages to visualize overall team workload">metrics</a>
-          <a href="assets/jwd/filter.png" class="glightbox glightbox-link" data-title="<strong>Filtered view</strong> — only tickets for the selected status are displayed, providing a clear snapshot of workload">filter</a></p>
+          <a href="assets/jwd/assign.png" class="glightbox glightbox-link" data-title="<strong>Tickets Awaiting Assignment</strong> — displays unassigned items in the queue and team members availability">availability</a>
+          <a href="assets/jwd/progress-2.png" class="glightbox glightbox-link" data-title="<strong>Dynamic Metrics</strong> — toggle between counts and percentages to visualize overall team workload">metrics</a>
+          <a href="assets/jwd/filter.png" class="glightbox glightbox-link" data-title="<strong>Filtered View</strong> — only tickets for the selected status are displayed, providing a clear snapshot of workload">filter</a></p>
         </div>
 
         <p>Core capabilities:</p>
@@ -350,7 +350,7 @@
         <p>An application that provides pre-production analysis of Microsoft Word documents, identifying accessibility and structural issues while delivering actionable diagnostics through automated validation and accessibility scoring.</p>
 
         <figure class="fig-thumb">
-          <a href="assets/dp/dp.jpg" class="glightbox" data-title="<strong>Automated issue detection</strong> — scans the document for accessibility, structure, formatting, and link integrity problems, categorizing findings by priority with a live accessibility score">
+          <a href="assets/dp/dp.jpg" class="glightbox" data-title="<strong>Automated Issue Detection</strong> — scans the document for accessibility, structure, formatting, and link integrity problems, categorizing findings by priority with a live accessibility score">
             <img src="assets/dp/dp.jpg" alt="">
           </a>
           <figcaption><strong>Automated issue detection</strong> — scans the document for accessibility, structure, formatting, and link integrity problems, categorizing findings by priority with a live accessibility score</figcaption>
@@ -359,8 +359,8 @@
         <!-- Gallery Thumbnails -->
         <div class="gallery">
         <p><strong>View gallery:</strong>
-          <a href="assets/dp/dp-issues.jpg" class="glightbox glightbox-link dp-btn" data-title="<strong>Automated issue detection</strong> — scans the document for accessibility, structure, formatting, and link integrity problems, categorizing findings by priority with a live accessibility score">issue detection</a>
-          <a href="assets/dp/dp-links.png" class="glightbox glightbox-link dp-btn" data-title="<strong>Parallel link validation</strong> — executes URL checks in parallel, preserving full interface responsiveness during document analysis">link validation</a></p>
+          <a href="assets/dp/dp-issues.jpg" class="glightbox glightbox-link dp-btn" data-title="<strong>Automated Issue Detection</strong> — scans the document for accessibility, structure, formatting, and link integrity problems, categorizing findings by priority with a live accessibility score">issue detection</a>
+          <a href="assets/dp/dp-links.png" class="glightbox glightbox-link dp-btn" data-title="<strong>Parallel Link Validation</strong> — executes URL checks in parallel, preserving full interface responsiveness during document analysis">link validation</a></p>
         </div>
         
         <p>Key Features:</p>
@@ -427,7 +427,8 @@
         <!-- Gallery Thumbnails -->
         <div class="gallery">
         <p><strong>View gallery:</strong>
-          <a href="assets/cb/cb-links.png" class="glightbox glightbox-link cb-btn" data-title="<strong>Parallel link validation</strong> — runs link checks independently and in parallel, displaying live status codes while letting you continue working uninterrupted in the editor">link validation report</a>
+          <a href="assets/cb/cb-links.png" class="glightbox glightbox-link cb-btn" data-title="<strong>Parallel Link Validation</strong> — runs link checks independently and in parallel, displaying live status codes while letting you continue working uninterrupted in the editor">link validation report</a>
+          <a href="/assets/codebot-diagram.pdf" class="glightbox glightbox-link cb-btn" data-title="<strong>System Architecture</strong> — detailed visual blueprint of the end-to-end processing pipeline, illustrating component interactions, data flow, and automated execution stages">system architecture</a>
         </div>
 
         <p>Here are the key features:</p>
@@ -460,7 +461,7 @@
         <p>This application automates a previously manual time-consuming task by converting web pages into bilingual PDF files. It reads URLs from a spreadsheet and processes each one converting the page to a PDF file.</p>
 
         <figure class="fig-thumb">
-          <a href="assets/apb/apb.png" class="glightbox" data-title="<strong>Browser PDF automation pipeline</strong> — processes spreadsheet-based URLs, expands dynamic content, sanitizes layout elements, and generates consistent bilingual PDF outputs">
+          <a href="assets/apb/apb.png" class="glightbox" data-title="<strong>Browser PDF Automation Pipeline</strong> — processes spreadsheet-based URLs, expands dynamic content, sanitizes layout elements, and generates consistent bilingual PDF outputs">
             <img src="assets/apb/apb.png" alt="">
           </a>
           <figcaption class="figCap"><strong>Browser PDF automation pipeline</strong> — processes spreadsheet-based URLs, expands dynamic content, sanitizes layout elements, and generates consistent bilingual PDF outputs</figcaption>
@@ -483,7 +484,7 @@
         <p>Batch-driven desktop application that converts Word documents both new and old legacy formats (doc and docx) to clean, valid HTML5, automating a typically tedious manual process common in government departments.</p>        
 
         <figure class="fig-thumb">
-          <a href="assets/fcn/fcn-50.png" class="glightbox" data-title="<strong>Conversion & analytics engine</strong> — processes up to 1,000 DOC/DOCX files in minutes, transforming them into clean, standards-compliant HTML5 while providing complexity analysis, performance metrics, corrupted file recovery, and automated Outlook delivery">
+          <a href="assets/fcn/fcn-50.png" class="glightbox" data-title="<strong>Conversion & Analytics Engine</strong> — processes up to 1,000 DOC/DOCX files in minutes, transforming them into clean, standards-compliant HTML5 while providing complexity analysis, performance metrics, corrupted file recovery, and automated Outlook delivery">
             <img src="assets/fcn/fcn-50.png" alt="">
           </a>
           <figcaption><strong>Conversion & analytics engine</strong> — processes up to 1,000 DOC/DOCX files in minutes, transforming them into clean, standards-compliant HTML5 while providing complexity analysis, performance metrics, corrupted file recovery, and automated Outlook delivery</figcaption>
@@ -516,7 +517,7 @@
         <!-- Gallery Thumbnails -->
         <div class="gallery">
         <p><strong>View gallery:</strong>
-          <a href="assets/fc/fc-table.png" class="glightbox glightbox-link fc-btn" data-title="<strong>Instant WET4 integration</strong> — send tables straight to the WET4 Table Validator without leaving Flash‑Code, streamlining web accessibility validation in a single click">WET4 Table Validator</a>
+          <a href="assets/fc/fc-table.png" class="glightbox glightbox-link fc-btn" data-title="<strong>Instant WET4 Integration</strong> — send tables straight to the WET4 Table Validator without leaving Flash‑Code, streamlining web accessibility validation in a single click">WET4 Table Validator</a>
         </div>
 
         <p>Here are some features:</p>
@@ -539,7 +540,7 @@
         <p>Cloud-based microservice that converts table images into structured HTML. It accepts binary image uploads, performs server-side OCR and table detection, and returns clean, standardized output ready for downstream automation. The service runs in both local and web-based environments, delivering fast and consistent results. Built as a scalable, serverless component, TableXtract can be easily integrated into existing applications and workflows that require accurate table extraction from screenshots, scans, or other image sources.</p>
 
         <figure class="fig-thumb">
-          <a href="assets/tx/tx-1.png" class="glightbox" data-title="<strong>AI-powered table extraction</strong> — converts uploaded images into structured, editable tables with preserved layout and cell relationships">
+          <a href="assets/tx/tx-1.png" class="glightbox" data-title="<strong>AI-Powered Table Extraction</strong> — converts uploaded images into structured, editable tables with preserved layout and cell relationships">
             <img src="assets/tx/tx-1.png" alt="">
           </a>
           <figcaption><strong>AI-powered table extraction</strong> — converts uploaded images into structured, editable tables with preserved layout and cell relationships</figcaption>
@@ -548,7 +549,7 @@
         <!-- Gallery Thumbnails -->
         <div class="gallery">
         <p><strong>View gallery:</strong>
-          <a href="assets/tx/tx-2.png" class="glightbox glightbox-link tx-btn" data-title="<strong>Structured HTML output</strong> — generated, standards-compliant table markup ready for direct integration into web workflows">HTML code view</a>
+          <a href="assets/tx/tx-2.png" class="glightbox glightbox-link tx-btn" data-title="<strong>Structured HTML Output</strong> — generated, standards-compliant table markup ready for direct integration into web workflows">HTML code view</a>
         </div>
 
         <p>Core features:</p>
@@ -570,7 +571,7 @@
         <p>Originally designed with financial data in mind, this tool provides a graphical interface for editing and customizing HTML tables. It enables quick styling and structural changes, while also managing accessibility attributes without the need to write HTML code.</p>
 
         <figure class="fig-thumb">
-          <a href="assets/tc/tc.png" class="glightbox" data-title="<strong>Graphical table editor</strong> — real-time HTML table customization with structural controls, accessibility management, and instant visual feedback">
+          <a href="assets/tc/tc.png" class="glightbox" data-title="<strong>Graphical Table Editor</strong> — real-time HTML table customization with structural controls, accessibility management, and instant visual feedback">
             <img src="assets/tc/tc.png" alt="">
           </a>
           <figcaption class="figCap"><strong>Graphical table editor</strong> — real-time HTML table customization with structural controls, accessibility management, and instant visual feedback</figcaption>
