--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
         <div class="gallery">
         <p><strong>View gallery:</strong>
           <a href="assets/cb/cb-links.png" class="glightbox glightbox-link cb-btn" data-title="<strong>Parallel Link Validation</strong> — runs link checks independently and in parallel, displaying live status codes while letting you continue working uninterrupted in the editor">link validation report</a>
-          <a href="/assets/codebot-diagram.pdf" class="glightbox glightbox-link cb-btn" data-title="<strong>System Architecture</strong> — detailed visual blueprint of the end-to-end processing pipeline, illustrating component interactions, data flow, and automated execution stages">system architecture</a>
+          <a href="/assets/cb/codebot-architecture.png" class="glightbox glightbox-link cb-btn" data-title="<strong>System Architecture</strong> — detailed visual blueprint of the end-to-end processing pipeline, illustrating component interactions, data flow, and automated execution stages">system architecture</a>
         </div>
 
         <p>Here are the key features:</p>
