--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@
       <!-- ROW 2: Image left + Hero Title right (with overflow) -->
       <div class="row-2">
         <div class="row-2-image">
-          <img src="assets/hero/row2img.png" alt="">
+          <img src="assets/hero/jsf-jwd.png" alt="">
         </div>
         <div class="row-2-title">
           <h1>Shaped by real<div class="second-line"><span>production</span> needs</div></h1>
