--- a/index.html
+++ b/index.html
@@ -932,6 +932,13 @@
 
 /* ===== MOBILE (under 900px) ===== */
 @media (max-width: 899px) {
+
+  .top-bar .container { padding: 1rem; }
+  .project-wrapper { padding: 0; }
+  .project-detail.active { border-radius: 0; padding: 20px; }
+  .zero-badge { font-size: 1.7em; margin-bottom: 1rem; }
+  .elevateTop { display: none; }
+
   .hero-section {
     padding: 2rem 1rem;
   }
@@ -965,6 +972,7 @@
   .row-2-title .second-line {
     justify-content: flex-start;
     margin-left: 0;
+    display: block;
   }
   
   .row-4 {
@@ -997,6 +1005,7 @@
   .row-5-text {
     font-size: 2.5rem;
     order: 1;
+    left: 0;
   }
   
   .row-5-image {
@@ -1121,22 +1130,6 @@
       
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
